--- a/Styles.css
+++ b/Styles.css
@@ -12,3 +12,54 @@ p{
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 font-size: 20px;
 }
+
+button {
+    color: #fff;
+    background-color: #025157;
+}
+
+li {
+    display:inline
+}
+
+.header {
+    margin-top: 40px;
+    margin: 40px 20px 0;
+    font-size: 0
+}
+
+.header > *{
+    display: inline-block;
+    font-size: 16px;
+    line-height: 100%;
+    vertical-align: middle;
+}
+
+.logo{
+    width: 15%;
+}
+
+.logo > img {
+    width:50px;
+    height: 45 px
+}
+
+.navbar {
+    width:70%;
+    text-align: center;
+    font-size: 14px;
+    color: #025157;
+    font-weight: 500;
+}
+
+.actions {
+    width:15%;
+    text-align: right;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.main  {
+    margin-top: 140px; 
+    text-align: center;
+}
