--- a/Styles.css
+++ b/Styles.css
@@ -96,3 +96,44 @@ li {
     justify-content: center;
     margin: 20px 0;
 }
+
+
+.publicidad h1{
+    font-family: "Alegreya", serif;
+  font-size: 40px;
+  line-height: 48px;
+  color: #025157;
+}
+
+.publicidad > p{
+    font-family: "Alegreya", serif;
+    font-size: 16px;
+    color: #343434;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.publicidad > form {
+    display: flex;
+  }
+
+  .publicidad > form p {
+    color: #025157;
+    margin-right: 18px;
+  }
+  
+form{
+    align-items: center;
+}
+
+  .video > *{
+    margin-left: 20px;
+     }
+
+ .video{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+
+ 
