--- a/Styles.css
+++ b/Styles.css
@@ -1,8 +1,27 @@
+
 body{
     background-color: #fffbf7;
 }
 
+.headerBootstrap div{
+    width: 100vw;
+}
+
+.navbarBootsrap {
+    width: 100vw;
+}
+
+.navbar-brand{
+    width: 10%;
+}
+
+.navbar-actions{
+    width: 70%;
+    justify-content: center;
+}
+
 h1{
+    font-size: 60px;
     color: #025157;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
@@ -43,8 +62,10 @@ li {
 }
 
 .logo > img {
-    width:50px;
-    height: 45 px;
+    width:5vw;
+    height:5vw;
+    max-width: 100px;
+    max-width: 100px;
 }
 
 .navbar {
@@ -64,6 +85,7 @@ li {
     font-size: 14px;
     font-weight: 600;
     font-family: 'Open Sans', sans-serif;
+   
 }
 
 .main  {
@@ -98,7 +120,7 @@ li {
 }
 
 
-.publicidad h1{
+.publicidad h3{
     font-family: "Alegreya", serif;
   font-size: 40px;
   line-height: 48px;
@@ -111,7 +133,7 @@ li {
     color: #343434;
     line-height: 1.5;
     margin-bottom: 20px;
-}
+    }
 
 .publicidad > form {
     display: flex;
@@ -136,19 +158,190 @@ form{
     align-items: center;
  }
 
- .features{
-    height: 660px;
-    display: grid;
-    grid-template: repeat(2,1fr) / repeat(2,1fr);
-    justify-items: center;
-    align-items: center;
-    border: #025157 solid;
+ 
+/*RETO 4 - SESION 4*/
+.features {
     background-color: #025157;
-        }
-
-.features article{
+    padding: 5% 10%;
+    display: grid;
+    grid-template: repeat(2, 330px) / repeat(2, 1fr);
+  }
+  
+  .features .feature-card {
+    margin-bottom: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
     background-color: #fff;
-    border-radius: 10px;
-    margin: 10px 20px;
-    border: #fff solid ;
+    border: 1px solid #dadada;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+  }
+  
+  .features .feature-card .feature-content {
+    padding: 30px 20px 40px 40px;
+    flex: 2;
+  }
+  
+  .features .feature-card .feature-content > * {
+    margin-bottom: 1rem;
+    margin-top: 0;
+  }
+  
+  .features .feature-card .feature-content img {
+    width: 50px;
+  }
+  
+  .features .feature-card .feature-content h3 {
+    font-size: 24px;
+    color: #343434;
+    font-weight: 400;
+  }
+  
+  .features .feature-card .feature-content p {
+    font-size: 16px;
+    color: #7e7e7e;
+    font-weight: 400;
+  }
+  
+  .features .feature-card .feature-content a {
+    font-size: 16px;
+    color: #67b54b;
+    font-weight: 600;
+    text-decoration: none;
+  }
+  
+  .features .feature-card .feature-image {
+    flex: 1;
+    width: 40%;
+    position: relative;
+    right: -50px;
+    height: 80%;
+  }
+  
+  .features .feature-card .feature-image figure,
+  .features .feature-card .feature-image img {
+    margin-top: 0;
+    height: 100%;
+  }
+
+
+
+/*para dispositivos moviles*/
+@media (max-width:575px){
+    /* Comentado por el uso de bootstrap reto 5 sesion 4
+    
+    .navbar,
+     .actions{
+            display: none;
+        }
+    h1 {
+        font-size:  30px;
+    }*/
+
+    .logo{
+        width: 15vw;
+        height: 15vw;
+        max-width: 20px;
+        max-height: 20px;
+    }
+    .main{
+        margin-top: 20px;
+    }
+   .banner > img {
+    width: 100%;
+   }
+
+   .publicidad > form {
+    flex-direction: column;
+   }
+
+   .publicidad > form > div{
+    height: 50px;
+    margin-top: 10px;
+    text-align: left;
+   }
+    .publicidad > form > div > input {
+    width: 65%;
+    margin-bottom: 20px;
+
+    }
+
+    .promo {
+        flex-direction: column;
+        max-width: 90%;
+    }
+
+    .video > video {
+        width: 100%;
+    }
+
+    .publicidad > h3 {
+        font-size: 25px;
+        line-height: 1.2;
+    }
+
+    .features {
+    margin-top: 20px;
+    grid-template: repeat(4, 1fr) / 1fr;
+    padding-left: 0;
+    padding-right: 0;
+
+      }
+
+      .feature-image {
+        display: none;
+      }
+      
+
+      .features .feature-card .feature-content img {
+        margin-top: 10px;
+        width: 15vw;
+      }
+
+
+      .features .feature-card .feature-content h3 {
+        font-size: 1.5rem;
+        color: #343434;
+        font-weight: 400;
+      }
+      
+      .features .feature-card .feature-content p {
+        font-size: 1.2rem;
+        color: #7e7e7e;
+        font-weight: 400;
+      }
+      
+      .features .feature-card .feature-content a {
+        font-size: 0.8rem;
+        color: #67b54b;
+        font-weight: 600;
+        text-decoration: none;
+      }
+      
+      .features .feature-card .feature-image {
+        flex: 1;
+        width: 40%;
+        position: relative;
+        right: -50px;
+        height: 80%;
+      }
+      
+      .features .feature-card .feature-image figure,
+      .features .feature-card .feature-image img {
+        margin-top: 0;
+        height: 100%;
+      }
+
+}
+
+/*para orientacion horizontal*/
+@media (min-width:576px) and (max-width:767px){
+
+}
+
+/*para una tablet */
+@media (min-width:768px) and (max-width:991){
+
 }
